--- a/trip_split_app/public/index.html
+++ b/trip_split_app/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Учёт расходов в поездках</title>
-  <link rel="stylesheet" href="/public/style.css">
+  <link rel="stylesheet" href="./style.css">
   <!-- We do not rely on external fonts due to offline constraints -->
   <style>
     @keyframes fadeIn {
@@ -20,6 +20,6 @@
   <main id="app" class="app-container">
     <!-- Content will be injected by app.js -->
   </main>
-  <script defer src="/public/app.js"></script>
+  <script defer src="./app.js"></script>
 </body>
 </html>
