--- a/trip_split_app/public/index.html
+++ b/trip_split_app/public/index.html
@@ -20,6 +20,12 @@
   <main id="app" class="app-container">
     <!-- Content will be injected by app.js -->
   </main>
-  <script defer src="./app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script>
+  window.SUPABASE_URL = "https://cewelnjomfwurpslksca.supabase.co";
+  window.SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNld2VsbmpvbWZ3dXJwc2xrc2NhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTcwNjg5NjEsImV4cCI6MjA3MjY0NDk2MX0.S2AG5wdlsMAUhXlIfwtih7nJv3FE0asfqpZszpJEqKY";
+</script>
+<script defer src="./app.js"></script>
+
 </body>
 </html>
