--- a/trip_split_app/public/index.html
+++ b/trip_split_app/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Учёт расходов в поездках</title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="icon" type="image/png" href="/img/travel_bg.png">
   <!-- We do not rely on external fonts due to offline constraints -->
   <style>
     @keyframes fadeIn {
